...
 */
@Composable
fun ArticleListItem(modifier: Modifier = Modifier, article: Article, onViewDetail: () -> Unit) {
    DefaultOverviewListItemCard(
        modifier = modifier.clickable {
            onViewDetail()
        }.testTag("articleListItem"),
    ) {
        ListItem(
            headlineContent = {
                Text(article.title, style = MaterialTheme.typography.titleMedium, modifier = Modifier.testTag("articleListItemTitle"))
            },
            leadingContent = {
                Box(
                    modifier = Modifier
                        .width(dimensionResource(R.dimen.image_container_small))
                        .height(dimensionResource(R.dimen.image_container_small)),
...
