...
 * @param studyLocation The study location to display.
 * @param onViewDetail Callback to view the detail of the study location.
 */
@Composable
fun StudyLocationListItem(modifier: Modifier = Modifier, studyLocation: StudyLocation, onViewDetail: () -> Unit) {
    DefaultOverviewListItemCard(
        modifier = modifier.clickable { onViewDetail() }.testTag("studyLocationListItem"),
    ) {
        Column(
            modifier = Modifier
                .fillMaxWidth()
                .padding(dimensionResource(R.dimen.padding_medium)),
            verticalArrangement = Arrangement.spacedBy(dimensionResource(R.dimen.padding_medium)),
...
                        studyLocation.label,
                        style = MaterialTheme.typography.bodySmall,
                        modifier = Modifier.padding(dimensionResource(R.dimen.padding_extra_small)),
                    )
                }
            }
            Text(studyLocation.title, style = MaterialTheme.typography.titleMedium, modifier = Modifier.testTag("studyLocationListItemTitle"))
            Row(horizontalArrangement = Arrangement.spacedBy(dimensionResource(R.dimen.padding_medium)), verticalAlignment = Alignment.CenterVertically) {
                Icon(
                    imageVector = Icons.Outlined.LocationOn,
                    contentDescription = stringResource(R.string.location),
                    tint = MaterialTheme.colorScheme.primary,
                )
...
